# automation

AWS/Lambda/qualys-asset-management/: pyproject.toml
AWS/Lambda/qualys-asset-management/ssm-qualys-agent-install/cloudformation/: ssm-qualys-agent-install.all.yaml  ssm-qualys-agent-install.cf.yaml
AWS/Lambda/repo-backup/: README.md  azure-pipelines.yml  backup.py
AWS/SystemsManager/: AWS_Qualys_Client_Install_Script.bash  AWS_Qualys_Client_Install_Script.ps1  README.md
Azure/: README.md  azureRunCommandOnVm.ps1  azureRunKqlQuery.ps1  createRGInterface.psf  deployAzureFirewallPowershell.ps1  namingConventionService.ps1
Azure/AKS/: aksCheckNodesMemoryPressureByNamespace.ps1  aksCheckNodesMemoryPressureByNode.ps1  basicAksUpgradeCommand.ps1  removeAksConfigMap.bash
Azure/Bicep/: expressRouteCircuit.bicep  expressRouteCircuit.parameters.example.jsonc  expressRouteConnection.bicep  expressRouteConnection.example.bicepparam  managedIdentity.bicep  virtual-network-gateways.bicep  virtual-network-gateways.example.bicepparam
Azure/Designs/: azureSecurityHighOverview.puml
Azure/PSModules/: exportModule.psd1  exportModule.psm1
Azure/otherResources/: applicationRules.json  networkRules.json
O365/: addMsolRoleMember.ps1
